# local-ai-runtime

./: .gitignore  AGENT_MODEL.md  README.md  SETUP_TEMPLATE.md  install.sh  pyproject.toml  release.sh
Formula/: local-ai-runtime.rb
backend/controllers/: chat_controller.py  model_controller.py
backend/models/: chat_message.py
backend/routes/: chat.py
backend/services/: inference_service.py
config/: README.md  model.config.example.json  server.config.example.json
docs/: decisions.md  model_compatibility.md
frontend/: app.jsx  index.html  package.json  vite.config.js
frontend/components/: ChatWindow.jsx  InputBar.jsx  ModelSelector.jsx
frontend/styles/: base.css
huggingface/: cache_manager.py  downloader.py  model_registry.py
integrations/github/: repo_metadata.py  sync_placeholder.py
local_ai_runtime/: cli.py  server.py
model_runtime/: chat_template_auto.py  inference_engine.py  model_loader.py  prompt_formatter.py  tokenizer_adapter.py
model_runtime/backends/: gemini_backend.py  llama_cpp.py  openai_backend.py  openai_compatible.py  registry.py
models/: .gitkeep
src/backend/: server.py
src/backend/controllers/: chat_controller.py  model_controller.py
src/backend/models/: __init__.py  model_config.py
src/backend/routes/: chat.py  config.py  conversations.py  metrics.py  models.py  openai_v1.py  status.py
src/backend/services/: conversation_service.py  inference_service.py  metrics_service.py  model_service.py
src/local_ai_runtime/: __init__.py  cli.py  config.py  server.py
src/local_ai_runtime/static/: index.html
src/model_runtime/: __init__.py  detector.py  providers.py
src/model_runtime/backends/: __init__.py  anthropic_backend.py  base.py  gemini_backend.py  ollama.py  openai_backend.py  openai_compatible.py  registry.py  vllm.py
