[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
local_ai_runtime = ["static/*"]

[project]
name = "local-ai-runtime"
version = "0.1.16"
description = "Local AI chat runtime — BYOK hybrid inference (local GGUF, ollama, vLLM, OpenAI, Anthropic, Gemini, any OpenAI-compatible)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "llama-cpp-python>=0.2.0",
]

[project.optional-dependencies]
llama-cpp = ["llama-cpp-python>=0.2.0"]
ollama = []
vllm = []
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
gemini = ["google-generativeai>=0.3.0"]
hf = ["huggingface-hub>=0.20.0"]
all = [
    "llama-cpp-python>=0.2.0",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "google-generativeai>=0.3.0",
    "huggingface-hub>=0.20.0",
]

[project.scripts]
local-ai-runtime = "local_ai_runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["local_ai_runtime*", "model_runtime*", "backend*"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]
