[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
local_ai_runtime = ["static/*"]

[project]
name = "local-ai-runtime"
version = "0.1.27"
description = "BYOK hybrid local AI runtime — 10+ backends, onboarding, OpenAI-compatible /v1 gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "sniffio>=1.3.0",
    "llama-cpp-python>=0.2.0",
]

[project.optional-dependencies]
# API backends use httpx (already a core dep). Extra groups kept for compatibility.
all = ["llama-cpp-python>=0.2.0"]

[project.scripts]
local-ai-runtime = "local_ai_runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["local_ai_runtime*", "model_runtime*", "backend*"]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]
